clusters/arcanis/randomart/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: randomart
  namespace: randomart
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 0
      maxUnavailable: 1
  selector:
    matchLabels:
      app: randomart
  template:
    metadata:
      labels:
        app: randomart
    spec:
      containers:
      - name: nginx
        image: nginx:alpine
        ports:
        - containerPort: 80
        volumeMounts:
        - name: html
          mountPath: /usr/share/nginx/html
      volumes:
      - name: html
        hostPath:
          path: /storage/appdata/randomart/src
          type: Directory
