clusters/arcanis/randomart/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: randomart
  namespace: randomart
spec:
  selector:
    app: randomart
  ports:
  - name: http
    port: 80
    targetPort: 80
